--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,18 @@
 version: 0.1
 
 phases:
+   install:
+    commands:
+      - npm i npm@latest -g
+  pre_build:
+    commands:
+      - npm install
   build:
     commands:
-      - echo Nothing to do yet
+      - npm run build
 
-artifacts:
-  files:
-    - package.json
-    - src/*
-    - public/*
+# artifacts:
+#   files:
+#     - package.json
+#     - src/*
+#     - public/*
