--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,8 +11,8 @@ phases:
     commands:
       - npm run build
 
-# artifacts:
-#   files:
-#     - package.json
-#     - src/*
-#     - public/*
+artifacts:
+  files:
+    - package.json
+    - src/*
+    - public/*
