trying quotes to see if that changes things

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,6 @@ phases:
 
 artifacts:
   files:
-    - package.json
-    - src/**/*
-    - public/*
-    base-directory: 'dist'
+    - "package.json"
+    - "src/**/*"
+    - "public/*"
