--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,21 @@
 version: 0.1
 
 phases:
+  # build:
+  #   commands:
+  #     - npm install
+  #     - npm run build
+  pre_build:
+    commands:
+      - echo Installing source NPM dependencies...
+      - npm install
   build:
     commands:
-      - npm install
+      - echo Build started on `date`
       - npm run build
 
 artifacts:
   files:
     - "**/*"
     - src/**/**/*
-  # base-directory: build
+  base-directory: build
