--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,5 @@ phases:
 artifacts:
   files:
     - "**/*"
-    - src/**/**/*
-  base-directory: build
+  # base-directory: build
   discard-paths: yes
