--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,5 +17,5 @@ phases:
 artifacts:
   files:
     - "**/*"
-  # base-directory: build
-  # discard-paths: yes
+  base-directory: build
+  discard-paths: yes
