--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-side-effect": "^2.1.0",
     "react-typing-effect": "^2.0.3",
     "styled-components": "^5.1.1",
     "validator": "^13.1.1"
